--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
           <p class="user-menu__contacts-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </section>
         <section class="user-menu__login">
-          <div>
+          <div class="user-menu__login-enter">
             <a href="#">Войти</a>
-          </div>
-          <div>
             <a href="#">Регистрация</a>
+          </div>
+          <div class="user-menu__login-info  user-menu__login-info--hidden">
+            <a class="user-menu__login-name">Равшан Джамшутович</a>
+            <a href="#">Мои заказы</a>
+            <a href="#">Личный кабинет</a>
           </div>
         </section>
       </section>
