--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-    <header>
+   <header>
       <section class="top-menu">
         <div class="logo">
-          <img src="" alt="">
+          <span>Техномарт</span>
         </div>
         <section class="top-menu__search">
-          <form action="">
+          <form method="get">
             <label for="search">Поиск:</label>
-            <input type="text" name="search">
+            <input type="text" name="search" id="search">
           </form>
         </section>
         <section class="top-menu__cart">
-          <ul class="cart__list">
-            <li class="cart__item">
-              <a href="#" class="cart__link">Закладки: 0</a>
+          <ul class="top-menu__cart-list">
+            <li class="top-menu__cart-tem">
+              <a href="#" class="top-menu__cart-item-link">Закладки: 0</a>
             </li>
-            <li class="cart__item">
-              <a href="#" class="cart__link">Корзина: 0</a>
+            <li class="top-menu__cart-item">
+              <a href="#" class="top-menu__cart-item-link  top-menu__cart-item-link--color">Корзина:10</a>
             </li>
-            <li class="cart__item">
-              <a href="#" class="cart__link">Оформить заказ</a>
+            <li class="top-menu__cart-item">
+              <a href="#" class="top-menu__cart-item-link">Оформить заказ</a>
             </li>
           </ul>
         </section>
@@ -40,13 +40,19 @@
         </section>
         <section class="user-menu__login">
           <div class="user-menu__login-enter">
-            <a href="#">Войти</a>
-            <a href="#">Регистрация</a>
+            <a href="#" title="Войти">Войти</a>
+            <a href="#" title="Регистрация">Регистрация</a>
           </div>
           <div class="user-menu__login-info  user-menu__login-info--hidden">
             <a class="user-menu__login-name">Равшан Джамшутович</a>
-            <a href="#">Мои заказы</a>
-            <a href="#">Личный кабинет</a>
+            <ul class="user-menu__login-info-list">
+              <li class="user-menu__login-info-item">
+                <a href="#">Мои заказы</a>
+              </li>
+              <li class="user-menu__login-info-item">
+                <a href="#">Личный кабинет</a>
+              </li>
+            </ul>
           </div>
         </section>
       </section>
@@ -127,7 +133,7 @@
           <ul class="popular-product__list">
             <li class="popular-product__item">
               <div class="popular-product__item-img">
-                <img src="" alt="">
+                <img src="img/bosh9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
               </div>
               <p class="popular-product__item-title">Перфоратор BOSCH BFG 9000</p>
               <p class="popular-product__item-oldcost">32500 р.</p>
@@ -135,7 +141,7 @@
             </li>
             <li class="popular-product__item">
               <div class="popular-product__item-img">
-                <img src="" alt="">
+                <img src="img/bosh3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
               </div>
               <p class="popular-product__item-title">Перфоратор BOSCH BFG 3000</p>
               <p class="popular-product__item-oldcost">22500 р.</p>
@@ -143,7 +149,7 @@
             </li>
             <li class="popular-product__item">
               <div class="popular-product__item-img">
-                <img src="" alt="">
+                <img src="img/bosh6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
               </div>
               <p class="popular-product__item-title">Перфоратор BOSCH BFG 6000</p>
               <p class="popular-product__item-oldcost">30500 р.</p>
@@ -151,7 +157,7 @@
             </li>
             <li class="popular-product__item">
               <div class="popular-product__item-img">
-                <img src="" alt="">
+                <img src="img/bosh2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
               </div>
               <p class="popular-product__item-title">Перфоратор BOSCH BFG 2000</p>
               <a href="" class="popular-product__item-price">12500 р.</a>
@@ -165,54 +171,56 @@
           <a href="#" class="popular-mark__title-link">Все производители</a>
         </div>
         <section class="popular-mark__name">
-          <li class="popular-mark__item">
-            <span class="popular-mark__item-name  popular-mark__item-name--hidden">bosch</span>
-            <a href="" class="popular-mark__item-link">
-              <img src="" alt="">
-            </a>
-          </li>
-          <li class="popular-mark__item">
-            <span class="popular-mark__item-name  popular-mark__item-name--hidden">Makita</span>
-            <a href="" class="popular-mark__item-link">
-              <img src="" alt="">
-            </a>
-          </li>
-          <li class="popular-mark__item">
-            <span class="popular-mark__item-name  popular-mark__item-name--hidden">DeWALT</span>
-            <a href="" class="popular-mark__item-link">
-              <img src="" alt="">
-            </a>
-          </li>
-          <li class="popular-mark__item">
-            <span class="popular-mark__item-name  popular-mark__item-name--hidden">Интерскол</span>
-            <a href="" class="popular-mark__item-link">
-              <img src="" alt="">
-            </a>
-          </li>
-          <li class="popular-mark__item">
-            <span class="popular-mark__item-name  popular-mark__item-name--hidden">Hitachi</span>
-            <a href="" class="popular-mark__item-link">
-              <img src="" alt="">
-            </a>
-          </li>
-          <li class="popular-mark__item">
-            <span class="popular-mark__item-name  popular-mark__item-name--hidden">LG</span>
-            <a href="" class="popular-mark__item-link">
-              <img src="" alt="">
-            </a>
-          </li>
-          <li class="popular-mark__item">
-            <span class="popular-mark__item-name  popular-mark__item-name--hidden">AEG</span>
-            <a href="" class="popular-mark__item-link">
-              <img src="" alt="">
-            </a>
-          </li>
-          <li class="popular-mark__item">
-            <span class="popular-mark__item-name  popular-mark__item-name--hidden">Metabo</span>
-            <a href="" class="popular-mark__item-link">
-              <img src="" alt="">
-            </a>
-          </li>
+          <ul class="popular-mark__name-list">
+            <li class="popular-mark__name-item">
+              <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">bosch</span>
+              <a href="" class="popular-mark__name-item-link">
+                <img src="img/logo-bosch.jpg" width="126" height="37" alt="bosch">
+              </a>
+            </li>
+            <li class="popular-mark__name-item">
+              <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">Makita</span>
+              <a href="" class="popular-mark__name-item-link">
+                <img src="img/Makita.jpg" width="123" height="40" alt="Makita">
+              </a>
+            </li>
+            <li class="popular-mark__name-item">
+              <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">DeWALT</span>
+              <a href="" class="popular-mark__name-item-link">
+                <img src="img/DeWALT.jpg" width="146" height="44" alt="DeWALT">
+              </a>
+            </li>
+            <li class="popular-mark__name-item">
+              <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">Интерскол</span>
+              <a href="" class="popular-mark__name-item-link">
+                <img src="img/%D0%98%D0%BD%D1%82%D0%B5%D1%80%D1%81%D0%BA%D0%BE%D0%BB.jpg" width="200" height="88" alt="Интерскол">
+              </a>
+            </li>
+            <li class="popular-mark__name-item">
+              <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">Hitachi</span>
+              <a href="" class="popular-mark__name-item-link">
+                <img src="img/Hitachi.jpg" width="169" height="31" alt="Hitachi">
+              </a>
+            </li>
+            <li class="popular-mark__name-item">
+              <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">LG</span>
+              <a href="" class="popular-mark__name-item-link">
+                <img src="img/LG.jpg" width="121" height="73" alt="LG">
+              </a>
+            </li>
+            <li class="popular-mark__name-item">
+              <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">AEG</span>
+              <a href="" class="popular-mark__name-item-link">
+                <img src="img/AEG.jpg" width="151" height="96" alt="AEG">
+              </a>
+            </li>
+            <li class="popular-mark__name-item">
+              <span class="popular-mark__name-item-title  popular-mark__name-item-title--hidden">Metabo</span>
+              <a href="" class="popular-mark__name-item-link">
+                <img src="img/Metabo.jpg" width="204" height="69" alt="Metabo">
+              </a>
+            </li>
+          </ul>
         </section>
       </section>
       <section class="service">
@@ -267,25 +275,25 @@
       </section>
     </main>
     <footer>
-      <div class="footer__top">
+      <div class="footer-top">
         <div class="logo"></div>
-        <nav class="footer__top-menu">
-          <ul class="footer__top-menu-list">
-            <li class="footer__top-menu-item">Компания</li>
-            <li class="footer__top-menu-item">Новости</li>
-            <li class="footer__top-menu-item">Каталог</li>
-            <li class="footer__top-menu-item">Доставка</li>
-            <li class="footer__top-menu-item">Контакты</li>
+        <nav class="footer-top__menu">
+          <ul class="footer-top__menu-list">
+            <li class="footer-top__menu-item">Компания</li>
+            <li class="footer-top__menu-item">Новости</li>
+            <li class="footer-top__menu-item">Каталог</li>
+            <li class="footer-top__menu-item">Доставка</li>
+            <li class="footer-top__menu-item">Контакты</li>
           </ul>
         </nav>
-        <p class="footer__top-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55
+        <p class="footer-top__adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55
         </p>
-        <section class="footer__top-submenu">
-          <ul class="footer__top-submenu-list">
-            <li class="footer__top-submenu-item">Материалы</li>
-            <li class="footer__top-submenu-item">Техника</li>
-            <li class="footer__top-submenu-item">Инструмент</li>
-            <li class="footer__top-submenu-item">Спецпредложения</li>
+        <section class="footer-top__submenu">
+          <ul class="footer-top__submenu-list">
+            <li class="footer-top__submenu-item">Материалы</li>
+            <li class="footer-top__submenu-item">Техника</li>
+            <li class="footer-top__submenu-item">Инструмент</li>
+            <li class="footer-top__submenu-item">Спецпредложения</li>
           </ul>
         </section>
       </div>
