--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <p class="contacts__description">Вы можете забрать товар сами,<br> заехав в наш офис:
             </p>
             <div class="contacts__map"></div>
-            <a href="#" class="contacts__popup">Заблудились? Напишите нам!</a>
+            <a href="form.html" class="contacts__popup">Заблудились? Напишите нам!</a>
           </section>
         </section>
       </div>
@@ -415,5 +415,26 @@
         </div>
       </div>
     </footer>
+
+
+
+    <div class="popup  popup--show">
+      <form class="popup-form" action="#" method="post">
+        <div class="half-width">
+          <label for="field-name">Ваше имя:</label>
+          <input type="text" name="name-post" id="field-name" placeholder="Представьтесь, пожалуйста">
+        </div>
+        <div class="half-width">
+          <label for="field-email">Ваш e-mail:</label>
+          <input type="text" name="email-post" id="field-email" placeholder="Для отправки ответа">
+        </div>
+        <label for="field-text">Текст письма:</label>
+        <textarea name="text-post" id="field-text" rows="5" placeholder="В свободной форме"></textarea>
+        <button class="button" type="submit">Отправить</button>
+      </form>
+      <button type="button" class="close">Закрыть</button>
+    </div>
+
+
   </body>
 </html>
