--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <title>HTML Academy: Техномарт!</title>
+    <title>HTML Academy: Техномарт</title>
   </head>
   <body>
     <header>
